# aster

./: .gitignore  Cargo.toml  README.md
resources/: aster.icns  info_plist_ext.plist
scripts/: build-dmg.sh
src/: app.rs  commands.rs  error.rs  logging.rs  main.rs
src/model/: document.rs  file_tree.rs  inline_markdown.rs  mod.rs  preview.rs  undo.rs
src/services/: assets.rs  fs.rs  inline_markdown.rs  markdown.rs  mod.rs  settings.rs  syntax.rs  tasks.rs
src/ui/: editor.rs  file_explorer.rs  mod.rs  preview.rs  root.rs  text_utils.rs  theme.rs  widgets.rs
