[package]
name = "aster"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
camino = "1.2.2"
directories = "6.0.0"
gpui = "0.2.2"
notify = "8.2.0"
once_cell = "1.21.3"
pulldown-cmark = "0.13.0"
rfd = "0.16.0"
ropey = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
syntect = "5.3.0"
tempfile = "3.24.0"
thiserror = "2.0.17"
toml = "0.9.10"
tracing = "0.1.44"
