[package]
name = "aster"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
anyhow = "1.0.100"
async-std = "1.13.2"
camino = "1.2.2"
directories = "6.0.0"
notify = "8.2.0"
once_cell = "1.21.3"
pulldown-cmark = "0.13.0"
rfd = "0.16.0"
ropey = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
syntect = "5.3.0"
tempfile = "3.24.0"
thiserror = "2.0.17"
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
gpui-component = "0.4.0"

[package.metadata.bundle]
identifier = "com.example.aster"
name = "Aster"
icon = ["resources/aster.icns"]
anyhow = "1.0.100"
async-std = "1.13.2"
camino = "1.2.2"
directories = "6.0.0"
gpui = "0.2.2"
notify = "8.2.0"
once_cell = "1.21.3"
pulldown-cmark = "0.13.0"
rfd = "0.16.0"
ropey = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
syntect = "5.3.0"
tempfile = "3.24.0"
thiserror = "2.0.17"
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
gpui-component = "0.4.0"
